--- a/lv6/calculatorGame.html
+++ b/lv6/calculatorGame.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,145 +9,152 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
+
 <body>
-
-<div class="start">
-    <div class="mb-104px df-aic">
-        <span class="h1-highlight text-white">
-            60
-        </span>
-        <h1>
-            SECONDS<span class="h1 decoration text-white">+−×÷</span>
-            <br>CHALLENGE
-        </h1>
-    </div>
-    <input type="button" value ="START!" id="startButton">
-    <span class="annotation">try to answer more as you can</span>
-</div>
-<div class="game d-n">
-    <div class="mb-104px df-aic">
-        <div class="fz-30px">
+    <div id="app">
+        <div class="start" v-show="openScene">
+            <div class="mb-104px df-aic">
+                <span class="h1-highlight text-white">
+                    60
+                </span>
+                <h1>
+                    SECONDS<span class="h1-decoration text-white">+−×÷</span>
+                    <br>CHALLENGE
+                </h1>
+            </div>
+            <input type="button" value="START!" @click='handleGameStart'>
+            <span class="annotation">try to answer more as you can</span>
+        </div>
+        <div class="game" v-show="gameScene">
+            <div class="mb-104px df-aic">
+                <div class="fz-30px">
+                    <h2 class="game-name">60 SECONDS CHALLENGE</h2>
+                    <div class="game-score bg-white">SCORE</div>
+                    <span class="scorenum">{{score}}</span>
+                </div>
+                <div class="game-countDown text-white">
+                    {{showTime}}
+                </div>
+            </div>
+            <div class="game-topic fz-112px">
+                <div class="game-topic-formula" v-html="formula">
+                    11<span class="text-white"> × </span>12<span class="text-white">=</span>
+                </div>
+                <input type="text" class="bg-white fz-112px" v-model="userAns" @keyup.enter="handleCheckAns"><br>
+                <span class="annotation input-ann">press enter to answer</span>
+            </div>
+        </div>
+        <div class="restart" v-show="endScene">
             <h2 class="game-name">60 SECONDS CHALLENGE</h2>
-            <div class="game-score bg-white">SCORE</div>
-            <span class="scorenum" id="scorenum">0</span>
-        </div>
-        <div class="game-countDown text-white" id="countDown">
-            00 : 00
+            <div class="restart-title"><span class="text-white">—</span> YOUR FINAL SCORE <span
+                    class="text-white">—</span>
+            </div>
+            <span class="mb-104px fz-112px">{{showResult}}</span>
+            <input type="button" value="TRY AGAIN!" @click='handleGameRestart'>
         </div>
     </div>
-    <div class="game-topic fz-112px">
-        <div class="game-topic-formula">11<span class="text-white"> × </span>12<span class="text-white"> =</span></div>
-        <input type="text" class="bg-white fz-112px" value="" id="inputAns"><br>
-        <span class="annotation input-ann">press enter to answer</span>
-    </div>
-</div>
-<div class="restart d-n">
-    <h2 class="game-name">60 SECONDS CHALLENGE</h2>
-    <div class="restart-title"><span class="text-white">—</span> YOUR FINAL SCORE <span class="text-white">—</span></div>
-    <span class="mb-104px fz-112px" id="result">74</span>
-    <input type="button" value = "TRY AGAIN!" id="restartButton">
-</div>
     <script>
-        const startScene = document.querySelector('.start'),
-              gameScene = document.querySelector('.game'),
-              restartScene = document.querySelector('.restart');
-        const startButton = document.querySelector('#startButton'),
-              restartButton =document.querySelector('#restartButton');
-        var time,score,answer;
-        var operators = ["+","-","×","÷"],
-            fomula = document.querySelector('.game-topic-formula');
-        var inputAns = document.querySelector('#inputAns'),
-            scoreShow = document.querySelector('.scorenum'),
-            countDown =document.querySelector('#countDown');
-        
-        startButton.addEventListener('click',function(){
-            time = 0,score =0;
-            scoreShow.innerText ="0";
-            startScene.classList.add("d-n");
-            gameScene.classList.remove("d-n");
-            countDownFun();
-            TopicGenerator();
-        })
-        restartButton.addEventListener('click',function(){
-            restartScene.classList.add("d-n");
-            startScene.classList.remove("d-n");
-        })
+        (function () {
+            // your variable goes here
+            var vm = new Vue({
+                el: '#app',
+                data: {
+                    time: 0,
+                    score: 0,
+                    userAns: "",
+                    correctAns: 0,
+                    operators: ["+", "-", "×", "÷"],
+                    openScene: true,
+                    gameScene: false,
+                    endScene: false,
+                    showTime: "00 : 00",
+                    showResult: 74,
+                    formula: "",
+                },
+                methods: {
+                    handleGameStart: function () {
+                        this.time = 0, this.score = 0, this.userAns = '';
+                        this.openScene = false, this.gameScene = true;
+                        this.countDown();
+                        this.topicGenerator();
+                    },
+                    handleGameRestart: function () {
+                        this.endScene = false, this.openScene = true;
+                    },
 
-        function countDownFun(){
-            var timer = setInterval(()=>{
-                time+=1;
-                if(time<=9) countDown.innerText ="00 : 0"+time;
-                else countDown.innerText = "00 : "+time;
-                if(time>=60){
-                    clearInterval(timer);
-                    gameScene.classList.add("d-n");
-                    restartScene.classList.remove("d-n");
-                    document.getElementById("result").innerText = score;
-                } 
-            },1000)
-        }
+                    countDown: function () {
+                        var timer = setInterval(() => {
+                            vm.time += 1;
+                            if (vm.time <= 9) vm.showTime = "00 : 0" + vm.time;
+                            else vm.showTime = "00 : " + vm.time;
+                            if (vm.time >= 60) {
+                                clearInterval(timer);
+                                vm.gameScene = false, vm.endScene = true;
+                                vm.showResult = vm.score;
+                            }
+                        }, 1000)
+                    },
+                    topicGenerator: function () {
+                        let a, b, operator;
+                        if (this.time <= 20) {
+                            a = getRandomInt(1, 10);
+                            b = getRandomInt(1, 10);
+                        } else if (this.time > 20 && this.time <= 40) {
+                            a = getRandomInt(10, 100);
+                            b = getRandomInt(10, 100);
+                        } else {
+                            a = getRandomInt(100, 1000);
+                            b = getRandomInt(100, 1000);
+                        }
+                        operator = this.operators[Math.floor(Math.random() * 4)];
+                        this.formula =
+                            `${a}<span class="text-white"> ${operator} </span>${b}<span class="text-white"> =</span>`;
+                        switch (operator) {
+                            case "+":
+                                this.correctAns = a + b;
+                                break;
+                            case "-":
+                                this.correctAns = a - b;
+                                break;
+                            case "×":
+                                this.correctAns = a * b;
+                                break;
+                            case "÷":
+                                this.correctAns = a / b;
+                                this.correctAns = formatFloat(this.correctAns, 1);
+                                break;
+                        }
+                    },
+                    handleCheckAns: function () {
+                        if (this.time <= 40) {
+                            if (this.userAns == this.correctAns) this.score += 1;
+                            else if (this.userAns != this.correctAns && this.score > 0) this.score -= 1;
+                            this.userAns = " ";
+                            this.topicGenerator();
+                        } else if (this.time <= 60 && this.time > 40) {
+                            if (this.userAns == this.correctAns) this.score += 5;
+                            else if (this.userAns != this.correctAns && this.score > 0) this.score -= 1;
+                            this.userAns = " ";
+                            this.topicGenerator();
+                        }
+                    }
+                },
+            })
 
-        function TopicGenerator(){
-            let a,b,operator;
-            if(time<=20){
-                a = getRandomInt(1,10);
-                b = getRandomInt(1,10);
+            getRandomInt = function (min, max) {
+                min = Math.ceil(min);
+                max = Math.floor(max);
+                return Math.floor(Math.random() * (max - min)) + min; //不含最大值，含最小值
             }
-            else if(time<=40){
-                a = getRandomInt(10,100);
-                b = getRandomInt(10,100);
+            formatFloat = function (num, pos) {
+                var size = Math.pow(10, pos);
+                return Math.round(num * size) / size;
             }
-            else{
-                a = getRandomInt(100,1000);
-                b = getRandomInt(100,1000);
-            }
-            operator = operators[Math.floor(Math.random()*4)];
-            fomula.innerHTML = `${a}<span class="text-white"> ${operator} </span>${b}<span class="text-white"> =</span>`;
-            switch(operator){
-                case "+":
-                answer = a + b;
-                break;
-                case"-":
-                answer = a - b;
-                break;
-                case"×":
-                answer = a * b;
-                break;
-                case"÷":
-                answer = a / b;
-                answer = formatFloat(answer,1);  
-                break;               
-            }
-        }
-        function getRandomInt(min, max) {
-        min = Math.ceil(min);
-        max = Math.floor(max);
-        return Math.floor(Math.random() * (max - min)) + min; //不含最大值，含最小值
-        }
-        function formatFloat(num, pos){
-            var size = Math.pow(10, pos);
-            return Math.round(num * size) / size;
-        }
-        inputAns.addEventListener('keypress',enterkey);
-        function enterkey(e){
-            let getAns = parseFloat(inputAns.value);
-            if(e.keyCode==13 && time<=40){
-                if(getAns==answer) score+=1;
-                else if(getAns!=answer&&score>0)score-=1;
-                inputAns.value = " ";
-                scoreShow.innerText = score;
-                TopicGenerator();
-            }
-            else if(e.keyCode == 13 && time<60 && time>40){
-                if (getAns == answer) score+=5;
-                else if(getAns!=answer&&score>0) score-=1;
-                inputAns.value = " ";
-                scoreShow.innerText = score;
-                TopicGenerator();
-            }
-        }
+
+        })();
     </script>
 </body>
+
 </html>
